# 1grade_labs

./: .gitignore  README.md
CW2/: CMakeLists.txt  CW01_description.md  tasks.md
CW2/task_1/: CMakeLists.txt  main.cpp  task1.cpp  task1.hpp  tests_task1.txt
CW2/task_2/: CMakeLists.txt  main.cpp  task2.cpp  task2.hpp  tests_task2.txt
KR/: task1.c  task2.c  Тесты на задачу 1.docx  Тесты на задачу 2.docx
Lab 1/: add_q.c  lab1.c  test.c  Вариант.txt  Отчёт1.docx
Lab 2/: add_q1.c  add_q2.c  task1.c  task2.c  test.c  test.cpp  ~$Отчёт2.docx  Вариант.txt  Отчёт2.docx
Lab 3/: add_q1.c  add_q2.c  task1.c  task2.c  task3.c  test.c  ~$Отчёт3.docx  Вариант.txt  Отчёт3.docx
Lab 4/: add_q.c  main.c  tempCodeRunnerFile.c  ~$Отчёт4.docx  Вариант.txt  Отчёт4.docx
Lab 5/: add_q1.c  add_q2.c  numbers.txt  task1.c  task2.c  test.c  ~$Отчёт4.docx  ~$Отчёт5.docx  ~WRL3787.tmp  Вариант.txt  Отчёт4.docx  Отчёт5.docx
Lab 6/: add_task.cpp  lib.h  main.cpp  tempCodeRunnerFile.cpp  ~$Отчёт.docx
Lab1/: add_q.c  lab1.c  test.c  ~$Отчёт1.docx  Вариант.txt
Lab7/: CMakeLists.txt  CMakePresets.json  ~$Отчёт.docx  ~WRL0003.tmp  Отчёт.docx
Lab7/arduino/: arduino_char_array.ino  diagram.json  sketch.ino
Lab7/c++/: CMakeLists.txt  main.cpp
Lab7/src/: char_array_lib.cpp  char_array_lib.h  main.cpp
